--- a/src/scss/view-button.scss
+++ b/src/scss/view-button.scss
@@ -283,6 +283,8 @@
             }
 
             .icon {
+                padding: 5px 8px 7px;
+                margin: 1px;
             }
         }
 
