--- a/src/scss/mixins/_logonlabs-buttons-type.scss
+++ b/src/scss/mixins/_logonlabs-buttons-type.scss
@@ -1,6 +1,6 @@
 @mixin breadbutter-buttons-type($name, $primaryColor, $fontColor) {
     .#{$name} {
-        .wrapper {
+        .bb-icon-wrapper {
             background-color: $primaryColor;
             border: 1px solid $primaryColor;
 
