--- a/src/scss/view-policy.scss
+++ b/src/scss/view-policy.scss
@@ -15,7 +15,7 @@
     margin-bottom: 18px;
     line-height: 1.5;
   }
-  button {
+  .bb-button {
     background-color: #343637;
     color: #fafafa;
     padding: 10px 15px;
