--- a/src/scss/view.scss
+++ b/src/scss/view.scss
@@ -24,7 +24,7 @@
             border-left: none !important;
             border-right: none !important;
             padding: 8px 13.5px;
-            margin-top: 10px;
+            margin: 10px 0 0 0 ;
             outline: none !important;
             display: inline-block;
             border-radius: 0 !important;
